--- a/courier_app/static/css/styles.css
+++ b/courier_app/static/css/styles.css
@@ -5,6 +5,7 @@
 @import 'helpers/flex.css';
 @import 'helpers/rounded.css';
 @import 'helpers/spacing.css';
+@import 'helpers/scroll-bar.css';
 @import 'helpers/typography.css';
 
 
