--- a/details/templates/details/origin-map.html
+++ b/details/templates/details/origin-map.html
@@ -36,7 +36,7 @@
             {% endif %}
             <p class="mt-4">
                 <h5 class="mb-2 font-bold">Dirección de recojo</h5>
-                <p>{{ detail.get_tracking_code }}</p>
+                <p>{{ detail.get_tracking_code_text }}</p>
                 <h6>{{ detail.address_origin.address_complete }}</h6>
                 <h6 class="mt-2">N° de puerta/Lte/Mz/Dpto/Piso</h6>
                 <p>{{ detail.address_origin.address_detail }}</p>
