--- a/courier_app/static/css/pages/admin-content.css
+++ b/courier_app/static/css/pages/admin-content.css
@@ -11,6 +11,7 @@
     padding: 0px 10px;
     height: 100%;
     display: none;
+    overflow-y: auto;
 }
 .page-admin .sidebar .sidebar-header{
     text-align: center;
