add div in order list head

--- a/orders/templates/orders/assign/unassign-deliveries.html
+++ b/orders/templates/orders/assign/unassign-deliveries.html
@@ -67,6 +67,7 @@
 </div>
 <div class="mb-10 order-list-grid">
     <div class="order-list-head checkbox">
+        <div></div>
         <div class="order-list-head-item">
             Detalles del pedido
         </div>
