--- a/orders/templates/orders/assign/unassign-origins.html
+++ b/orders/templates/orders/assign/unassign-origins.html
@@ -67,6 +67,7 @@
 </div>
 <div class="mb-10 order-list-grid">
     <div class="order-list-head checkbox">
+        <div></div>
         <div class="order-list-head-item">
             Detalles del pedido
         </div>
