--- a/orders/templates/orders/index.html
+++ b/orders/templates/orders/index.html
@@ -138,6 +138,7 @@
             Dirección de envío
         </div>
         <div class="order-list-head-item">
+            Estado
         </div>
         <div class="order-list-head-item" style="justify-self: end;">
             Acciones 
