--- a/orders/templates/orders/assign/origins.html
+++ b/orders/templates/orders/assign/origins.html
@@ -89,6 +89,9 @@
         <div class="order-list-head-item">
           ¿Quién te atenderá? 
         </div>
+        <div class="order-list-head-item">
+          Estado
+        </div>
         <div class="order-list-head-item" style="justify-self: end;">
             Acciones
         </div>
