--- a/orders/templates/orders/assign/unassign-origins.html
+++ b/orders/templates/orders/assign/unassign-origins.html
@@ -77,6 +77,9 @@
         <div class="order-list-head-item">
             ¿Quién te atenderá?
         </div>
+        <div class="order-list-head-item">
+            Estado
+        </div>
         <div class="order-list-head-item" style="justify-self: end;">
             Acciones
         </div>
