--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -1,7 +1,9 @@
 {% load static %}
  <nav class="container">
     <div class="navbar-left">
-        <img src="{% static 'img/logo.png' %}" alt="Cuy Click - Perú" class="logo">
+        <div id="menu-icon">
+            <i class="bx bx-menu bx-md"></i>
+        </div>
     </div>
     <div class="navbar-right">
         <a href="#" class="nav-item">
