--- a/clients/templates/clients/create.html
+++ b/clients/templates/clients/create.html
@@ -5,13 +5,7 @@
 {% block content_head %}
 <div class="content-head">
   <div class="left">
-      <a href="{% url 'clients:index' %}" class="btn btn-link btn-small">
-        <i class='bx bx-left-arrow-alt bx-sm'></i>
-      </a>
-      <h4>{{ title }}</h4>
-  </div>
-  <div class="right">
-      <a href="{% url 'auth:create' %}?next={{request.path|urlencode}}" class="btn btn-link btn-small text-primary">Nuevo usuario</a>
+    <h4>{{ title }}</h4>
   </div>
 </div>
 {% endblock content_head %}
@@ -19,25 +13,6 @@
 {% block content %}
 
 <div class="card card-form mb-10">
-  <form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {% for field in form %}
-      <div class="form-group">
-        {{ field.label_tag }} 
-        {{ field }} 
-        {% if field.errors %}
-          {% for error in field.errors %}
-          <div class="text-invalid">
-            {{ error }}
-          </div>
-          {% endfor %}
-        {% endif %}
-      </div>
-      {% endfor %}
-    <div class="actions right mt-5">
-      <a href="{% url 'clients:index' %}" class="btn btn-default">Cancelar</a>
-      <button type="submit" class="btn btn-primary">Guardar</button>
-    </div>
-  </form>
+  {% include 'clients/snippets/form.html' with btnText='Guardar' %}
 </div>
 {% endblock content %}
