--- a/details/templates/details/detail.html
+++ b/details/templates/details/detail.html
@@ -38,11 +38,15 @@
                 <div class="address-item">
                     <div class="address-delivered">
                         <div class="address-origin">
+                            <div class="text-small flex items-center"><i style="margin-right: 5px;"
+                                    class="bx bx-user bx-xs"></i> {{ detail.address_origin.full_name }}</div>
                             <h6>{{ detail.address_origin.address }}</h6>
                             <div class="text-small font-medium">{{ detail.address_origin.address_city }}</div>
                         </div>
                         <img class="order-icon" src="{% static 'icon/order-icon.svg' %}"/>
                         <div class="address-destiny">
+                            <div class="text-small flex items-center"><i style="margin-right: 5px;"
+                                    class="bx bx-user bx-xs"></i> {{ detail.address_destiny.full_name }}</div>
                             <h6>{{ detail.address_destiny.address }}</h6>
                             <div class="text-small font-medium">{{ detail.address_destiny.address_city }}</div>
                         </div>
