--- a/pages/templates/pages/home.html
+++ b/pages/templates/pages/home.html
@@ -12,7 +12,8 @@
         <form id="tracking-form">
             <h5 class="mb-6 font-bold">Dale seguimiento a tu pedido</h5>
             <div class="form-group-search">
-                <input type="search" class="input input-outline" name="tracking_code" placeholder="Ingresa tu # tracking">
+                <input type="search" class="input input-outline" name="tracking_code"
+                    placeholder="Ingresa tu # tracking">
                 <i class="input-icon bx bx-search bx-sm"></i>
             </div>
             <div class="font-medium" id="message" style="margin-top: -20px;display: none;"></div>
@@ -20,6 +21,20 @@
                 <button class="btn btn-secondary btn-small btn-rounded">
                     Buscar
                 </button>
+            </div>
+            <div class="mt-4" id="content" style="display: none;">
+                <div class="detail-package">
+                    <div class="detail-package__row">
+                        <h6>Estado</h6>
+                        <div style="justify-self: end;">
+                            <span id="status" class="badge"></span>
+                        </div>
+                    </div>
+                    <div class="detail-package__row">
+                        <h6>Distancia</h6>
+                        <p id="distance"></p>
+                    </div>
+                </div>
             </div>
         </form>
         <div class="card card-tracking">
@@ -46,13 +61,13 @@
         var form = document.querySelector('#tracking-form');
         form.addEventListener('submit', queryTrackingOrder)
 
-        function queryTrackingOrder(ev){
+        function queryTrackingOrder(ev) {
             ev.preventDefault();
 
             var tracking_code = form.tracking_code;
             var textMessage = document.querySelector('#message');
 
-            if (tracking_code.value == ''){
+            if (tracking_code.value == '') {
                 textMessage.innerHTML = 'El número de seguimiento es requerido';
                 textMessage.classList.add('text-danger');
                 textMessage.style.display = 'block';
@@ -62,32 +77,51 @@
             }
         }
 
-        function getOrderFetch(tracking_code){
+        function getOrderFetch(tracking_code) {
             var textMessage = document.querySelector('#message');
-            var orders = [];
             var directionsDisplay = new google.maps.DirectionsRenderer({ 'draggable': false });
             var directionsService = new google.maps.DirectionsService();
 
-            fetch('orders/tracking-order?tracking_code='+ tracking_code)
+            fetch('orders/tracking-order?tracking_code=' + tracking_code)
                 .then(res => res.json())
                 .then(data => {
-                    if (data.status){
+                    if (data.status) {
                         textMessage.style.display = 'none';
-                        data.details.forEach(detail => {
-                            displayRoute(
-                                detail.address_origin_text, 
-                                detail.address_destiny_text, 
-                                directionsService, 
-                                directionsDisplay
-                            );
-                        });
-
-                    }else{
+                        displayRoute(
+                            data.detail.address_origin_text,
+                            data.detail.address_destiny_text,
+                            directionsService,
+                            directionsDisplay
+                        );
+                        showContentTracking(data.detail);
+                    } else {
                         textMessage.innerHTML = 'El número de seguimiento no existe';
                         textMessage.classList.add('text-danger');
                         textMessage.style.display = 'block';
                     }
                 })
+        }
+        function showContentTracking(detail) {
+            var content = document.querySelector('#content');
+            content.style.display = 'block';
+            var statusClass = getStatusClass(detail);
+            var statusBadge = content.querySelector('#status');
+            statusBadge.classList.add(`badge-${statusClass}`)
+            statusBadge.innerText = detail.status_label;
+
+            content.querySelector('#distance').innerText = `${detail.distance} ${detail.distance < 1 ? 'M' : 'KM'}`;
+        }
+        function getStatusClass(detail) {
+            var statusClass = 'warning';
+            if (detail.status == 'PE') statusClass = 'warning';
+            else if (detail.status == 'RE') statusClass = 'success';
+            else if (detail.status == 'AL') statusClass = 'primary';
+            else if (detail.status == 'ER') statusClass = 'secondary';
+            else if (detail.status == 'EN') statusClass = 'success';
+            else if (detail.status == 'NEN') statusClass = 'warning';
+            else if (detail.status == 'REPR') statusClass = 'success';
+
+            return statusClass;
         }
     })()
     function displayRoute(origin_address, destiny_address, directionsService, directionsDisplay) {
